RESOLVED FIXED204390
[JSC] MetadataTable::sizeInBytes should not touch m_rawBuffer in UnlinkedMetadataTable unless MetadataTable is linked to that UnlinkedMetadataTable
https://bugs.webkit.org/show_bug.cgi?id=204390
Summary [JSC] MetadataTable::sizeInBytes should not touch m_rawBuffer in UnlinkedMeta...
Yusuke Suzuki
Reported 2019-11-19 17:44:01 PST
[JSC] MetadataTable::sizeInBytes should not touch m_rawBuffer in UnlinkedMetadataTable unless MetadataTable is linked to that UnlinkedMetadataTable
Attachments
Patch (3.22 KB, patch)
2019-11-19 17:49 PST, Yusuke Suzuki
mark.lam: review+
Yusuke Suzuki
Comment 1 2019-11-19 17:49:39 PST
Yusuke Suzuki
Comment 2 2019-11-19 17:50:41 PST
Mark Lam
Comment 3 2019-11-19 18:14:59 PST
Comment on attachment 383931 [details] Patch r=me
Yusuke Suzuki
Comment 4 2019-11-19 18:28:59 PST
Note You need to log in before you can comment on or make changes to this bug.